--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-scroll": "^1.8.9",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.6"
   },
